[FIX] web: fix properties mobile display
Fix the property mobile display:

- Set the popup in fullscreen.
- The draggable feature is disabled.
- Replacing the move up/move down property arrows in the popup by a
back arrow so that the fullscreen popup can be closed.
- Removing the min-width on the property popover to prevent the popup
from going out of the screen.
- Edit button is now always visible as hovering on it is not possible on mobile.

Task-3635554

closes odoo/odoo#156886

--- a/addons/web/static/src/views/fields/properties/property_definition.scss
+++ b/addons/web/static/src/views/fields/properties/property_definition.scss
@@ -3,7 +3,9 @@
     overflow-y: auto;
 
     .o_modal_container {
-        min-width: calc(#{$o-form-view-sheet-max-width} / 3);
+        @include media-breakpoint-up(sm) {
+            min-width: calc(#{$o-form-view-sheet-max-width} / 3);
+        }
         max-width: calc(#{$o-form-view-sheet-max-width} / 2);
     }
 
